fixed scrollbar corner being white

--- a/src/views/_shared/styles/scrollbar.scss
+++ b/src/views/_shared/styles/scrollbar.scss
@@ -14,6 +14,10 @@
     }
 }
 
+::-webkit-scrollbar-corner {
+    background: none;
+}
+
 // firefox fallback
 * {
     scrollbar-width: thin;
